--- a/sass/components/_our-team.scss
+++ b/sass/components/_our-team.scss
@@ -10,6 +10,9 @@
 
 .our-team__list {
     @extend %list;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
 }
 
 .our-team__member {
@@ -17,9 +20,9 @@ background-color: #ffffff;
 box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 border-radius: 0px 0px 4px 4px;
 
-&:not(:last-child) {
-        margin-bottom: 30px;
-    }
+// &:not(:last-child) {
+//         margin-bottom: 30px;
+//     }
 }
 
 .team-data {
@@ -52,7 +55,6 @@ border-radius: 0px 0px 4px 4px;
 }
 
 .our-team__social-item {
-
     &:not(:last-child) {
         margin-right: 10px;
     }
@@ -83,3 +85,16 @@ border-radius: 0px 0px 4px 4px;
 .our-team__social-icon {
     fill: currentColor;
 }
+// ...........................................................планшет
+
+.our-team__member {
+@media screen and (min-width:768px)  {
+    width: calc((100% - 30px) / 2);
+}
+@media screen and (min-width:1200px) {
+    width: calc((100% - 90px) / 4);
+}
+
+}
+
+
