--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,9 @@ body {
   background-color: var(--main-bgc);
   color: var(--primary-text-color);
 }
+body.no-scroll {
+  overflow: hidden;
+}
 
 .visually-hidden {
   position: absolute;
@@ -21,7 +24,7 @@ a {
   text-decoration: none;
 }
 
-.our-team__social, .our-team__list, .features__list, .social-list, .contacts, .nav-list {
+.porfolio-list, .filter-btns, .form-list, .footer-social__list, .footer-data__list, .customers-list, .our-team__social, .our-team__list, .features__list, .social-list, .contacts, .nav-list {
   list-style: none;
   margin: 0;
   padding: 0;
@@ -35,7 +38,6 @@ img {
   display: block;
   max-width: 100%;
   height: auto;
-  width: 100%;
 }
 
 .container {
@@ -64,6 +66,12 @@ img {
 .section {
   padding-top: 60px;
   padding-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .page-header {
@@ -111,18 +119,19 @@ img {
   .menu-container {
     padding: 48px 40px;
     background-color: #ffffff;
-    outline: 1px solid tomato;
-    display: none;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 5;
+    z-index: 3;
+    overflow: auto;
+    display: none;
+    flex-direction: column;
+    overflow: auto;
   }
   .menu-container.is-open {
     display: flex;
-    flex-direction: column;
   }
 }
 @media screen and (max-width: 767px) {
@@ -159,6 +168,13 @@ img {
     letter-spacing: 0.02em;
     color: #2196f3;
   }
+}
+@media screen and (max-width: 767px) and (max-width: 320px) {
+  .contacts__tel {
+    font-size: 27px;
+  }
+}
+@media screen and (max-width: 767px) {
   .contacts__email {
     font-weight: 500;
     font-size: 24px;
@@ -327,13 +343,15 @@ img {
   border-radius: 4px;
 }
 
+.features__list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+}
 .features__list .features__item {
   max-width: 450px;
   margin-left: auto;
   margin-right: auto;
-}
-.features__list .features__item:not(:last-child) {
-  margin-bottom: 30px;
 }
 
 .features__wrapper {
@@ -365,6 +383,17 @@ img {
   margin: 0px;
 }
 
+@media screen and (min-width: 768px) {
+  .features__item {
+    width: calc((100% - 30px) / 2);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .features__item {
+    width: calc((100% - 90px) / 4);
+  }
+}
+
 .our-team {
   background-color: #f5f4fa;
 }
@@ -378,13 +407,16 @@ img {
   letter-spacing: 0.03em;
 }
 
+.our-team__list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+
 .our-team__member {
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-}
-.our-team__member:not(:last-child) {
-  margin-bottom: 30px;
 }
 
 .team-data {
@@ -431,4 +463,616 @@ img {
 
 .our-team__social-icon {
   fill: currentColor;
+}
+
+@media screen and (min-width: 768px) {
+  .our-team__member {
+    width: calc((100% - 30px) / 2);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .our-team__member {
+    width: calc((100% - 90px) / 4);
+  }
+}
+
+.customers-title {
+  margin-top: 0;
+  margin-bottom: 30px;
+  font-size: 28px;
+  line-height: 1.1785714286;
+  letter-spacing: 0.03em;
+}
+
+.customers-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+
+.customers-item {
+  width: calc((100% - 30px) / 2);
+  height: 92px;
+}
+
+.customers-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #AFB1B8;
+  border-radius: 4px;
+  width: 100%;
+  height: 100%;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.customers-icon {
+  fill: #AFB1B8;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 768px) {
+  .customers-item {
+    width: calc((100% - 60px) / 3);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .customers-item {
+    width: calc((100% - 150px) / 6);
+  }
+}
+
+.footer {
+  background-color: #2F303A;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.footer-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+@media screen and (min-width: 1200px) {
+  .footer-wrapper {
+    display: flex;
+    flex-wrap: nowrap;
+  }
+}
+
+.footer-data {
+  width: 100%;
+  margin-bottom: 60px;
+  text-align: center;
+}
+@media screen and (min-width: 1200px) {
+  .footer-data {
+    margin: 0;
+    text-align: start;
+  }
+}
+
+.page-header__logo {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.1666666667;
+  letter-spacing: 0.03em;
+  color: #212121;
+  font-family: "Raleway", sans-serif;
+}
+.page-header__logo .page-header__text {
+  color: #2196f3;
+}
+.page-header__logo--inverse {
+  display: inline-block;
+  margin-bottom: 20px;
+  color: #ffffff;
+}
+
+.footer-data__address {
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  margin-bottom: 8px;
+  font-style: normal;
+}
+
+.footer-data__contacts:not(:last-child) {
+  margin-bottom: 8px;
+}
+.footer-data__contacts .footer-data__link {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.footer-social {
+  text-align: center;
+  margin-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .footer-social {
+    margin: 0;
+    text-align: start;
+  }
+}
+.footer-social__text {
+  display: inline-block;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  margin-top: 0px;
+  margin-bottom: 20px;
+  text-transform: uppercase;
+}
+
+.footer-social__list {
+  display: flex;
+  justify-content: center;
+}
+@media screen and (min-width: 1200px) {
+  .footer-social__list {
+    justify-content: flex-start;
+  }
+}
+
+.our-team__social-link--bgc {
+  width: 44px;
+  height: 44px;
+  border-radius: 50px;
+  background-color: rgba(255, 255, 255, 0.1);
+  color: #ffffff;
+  fill: #ffffff;
+}
+
+.subscribe {
+  text-align: center;
+}
+@media screen and (min-width: 1200px) {
+  .subscribe {
+    display: flex;
+    text-align: start;
+    align-items: self-end;
+    height: fit-content;
+  }
+}
+
+.subscribe__label .subscribe__text {
+  display: block;
+  margin-bottom: 20px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+  color: #ffffff;
+  letter-spacing: 0.03em;
+}
+
+.subscribe__input {
+  width: 100%;
+  height: 50px;
+  margin-bottom: 20px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  background-color: transparent;
+  padding: 15px 16px;
+  color: #ffffff;
+}
+.subscribe__input::placeholder {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+@media screen and (min-width: 1200px) {
+  .subscribe__input {
+    width: 358px;
+    margin: 0;
+  }
+}
+
+.subscribe__btn {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 200px;
+  height: 50px;
+  padding: 0;
+  border-radius: 4px;
+  border: none;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  background-color: #2196f3;
+  color: white;
+  font-weight: 700;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+}
+@media screen and (min-width: 1200px) {
+  .subscribe__btn {
+    margin-left: 12px;
+  }
+}
+.subscribe__btn .subscribe__icon {
+  margin-left: 10px;
+}
+
+@media screen and (min-width: 768px) {
+  .footer-data,
+.footer-social {
+    width: 50%;
+  }
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  opacity: 1;
+  z-index: 1;
+  padding: 93px 15px 94px 15px;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.backdrop.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal {
+  position: relative;
+  border-radius: 4px;
+  background-color: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  opacity: 1;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 480px) {
+  .modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    max-width: 450px;
+    width: 100%;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    max-width: 528px;
+  }
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(1.1);
+  opacity: 0;
+}
+
+.close-btn {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: #fff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+}
+.close-btn:hover > .close-icon, .close-btn:focus > .close-icon {
+  fill: #2196f3;
+}
+
+.close-icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form {
+  padding: 40px;
+  width: 100%;
+  height: 100%;
+}
+.form .form-header {
+  margin: 0;
+  margin-bottom: 12px;
+  text-align: center;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  letter-spacing: 0.03em;
+  color: #212121;
+}
+
+.form-item {
+  position: relative;
+  /* outline: 1px solid tomato; */
+}
+.form-item:nth-child(-n+3) {
+  margin-bottom: 10px;
+}
+.form-item:focus-within .form-icon {
+  fill: #2196f3;
+}
+.form-item-checkbox {
+  margin-bottom: 30px;
+}
+
+.form-icon {
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form__label {
+  display: block;
+  margin-bottom: 4px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: #757575;
+}
+
+.form__input {
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  outline: transparent;
+  border-radius: 4px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form__input:nth-child(-n+3) {
+  width: 100%;
+  height: 40px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  padding-left: 42px;
+}
+.form__input:focus {
+  border-color: #2196f3;
+}
+
+.comment {
+  margin-bottom: 20px;
+}
+
+.comment__textarea {
+  display: block;
+  width: 100%;
+  height: 120px;
+  padding: 12px 16px;
+  resize: none;
+  outline: transparent;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.comment__textarea::placeholder {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.1428571429;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+.comment__textarea:focus {
+  border-color: #2196f3;
+}
+
+.form-checkbox {
+  margin-bottom: 30px;
+}
+.form-checkbox .checkbox-label {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: #757575;
+  /* outline: 1px solid tomato; */
+}
+@media screen and (max-width: 1199px) {
+  .form-checkbox .checkbox-label {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.1666666667;
+    letter-spacing: 0.03em;
+    color: #757575;
+  }
+}
+
+.checkbox-icon {
+  display: flex;
+  align-items: center;
+  margin-right: 8.38px;
+  width: 16px;
+  height: 15px;
+  border: 2px solid #212121;
+  border-radius: 2px;
+  transition: background-color, border, background-image;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.checkbox-input:focus + .checkbox-icon {
+  border: 2px solid blue;
+  outline: 1px solid #2196f3;
+}
+
+.checkbox-input:checked + .checkbox-icon {
+  outline: transparent;
+  background-color: #2196f3;
+  border: 2px solid #2196f3;
+}
+
+.check-icon {
+  fill: transparent;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.checkbox-input:checked + .checkbox-icon .check-icon {
+  fill: #ffffff;
+}
+
+.form__link {
+  color: #2196f3;
+  text-decoration-line: underline;
+}
+
+.send-btn {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 200px;
+  height: 50px;
+  border-radius: 4px;
+  border: none;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  background-color: #2196f3;
+  color: white;
+  font-weight: 700;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  cursor: pointer;
+}
+
+.filter-btns {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 15px 8px;
+  margin-bottom: 40px;
+}
+@media screen and (min-width: 768px) {
+  .filter-btns {
+    justify-content: center;
+  }
+}
+
+.list-button {
+  padding: 6px 22px;
+  font-family: Roboto, sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  letter-spacing: 0.03em;
+  color: #212121;
+  background-color: #f5f4fa;
+  border: 0;
+  border-radius: 4px;
+  cursor: pointer;
+  transition-property: background-color, color, box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.list-button:hover, .list-button:focus {
+  background-color: #2196f3;
+  color: white;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.foto-item {
+  width: 100%;
+}
+.foto-item:not(:last-child) {
+  margin-bottom: 30px;
+}
+.foto-item:hover .pop-up {
+  transform: translateY(0);
+}
+.foto-item:hover .pop-up p {
+  opacity: 1;
+  transform: scaleX(1);
+}
+
+.portfolio-link {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio-link:hover, .portfolio-link:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.img-box {
+  position: relative;
+  overflow: hidden;
+}
+
+.pop-up {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 63px 24px;
+  background-color: rgba(33, 150, 243, 0.9);
+  transform: translateY(100%);
+  transition-property: transform;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.pop-up p {
+  margin: 0;
+  min-width: 168px;
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  opacity: 0;
+  transform: scaleX(0);
+  transition: opacity 1500ms cubic-bezier(0.4, 0, 0.2, 1), transform 1500ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-content {
+  flex-grow: 1;
+  padding: 20px 24px;
+  border-left: 1px solid #eeeeee;
+  border-right: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
+}
+
+.list-title {
+  margin-top: 0;
+  margin-bottom: 4px;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: #212121;
+  text-decoration: none;
+}
+
+.list-descr {
+  margin: 0;
+  font-size: 16px;
+  line-height: 1.875;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+
+@media screen and (min-width: 768px) {
+  .porfolio-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+  }
+  .porfolio-list .foto-item {
+    margin: 0;
+    flex-basis: calc((100% - 30px) / 2);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .porfolio-list .foto-item {
+    margin: 0;
+    flex-basis: calc((100% - 60px) / 3);
+  }
 }/*# sourceMappingURL=main.css.map */
