--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,15 +1,14 @@
 
 .features__list {
     @extend %list;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
 
     .features__item {
             max-width: 450px;
             margin-left: auto;
             margin-right: auto;
-
-            &:not(:last-child) {
-                    margin-bottom: 30px;
-                }
         }
 }
 
@@ -41,3 +40,14 @@
      color: $secondary-text-color;
      margin: 0px;
  }
+
+// ...........................................................планшет
+.features__item {
+    @media screen and (min-width:768px) {
+         width: calc((100% - 30px) / 2);
+    }
+ 
+    @media screen and (min-width:1200px) {
+        width: calc((100% - 90px) / 4);
+    }
+}
