--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,13 +5,17 @@
 @import './components/section';
 
 @import './components/header';
+@import './components/menu';
 @import './components/hero';
 @import './components/features';
 @import './components/our-team';
 @import './components/clients';
 @import './components/footer';
+@import './components/modal';
+@import './components/form';
 
-// @import './components/features';
+@import './components/portfolio';
+
 
 
 
