--- a/sass/utils/_style-reset.scss
+++ b/sass/utils/_style-reset.scss
@@ -2,6 +2,10 @@ body {
     font-family: "Roboto", sans-serif;
     background-color: var(--main-bgc);
     color: var(--primary-text-color);
+
+    &.no-scroll {
+        overflow: hidden;
+    }
 }
 
 .visually-hidden {
@@ -40,5 +44,5 @@ img {
     display: block;
     max-width: 100%;
     height: auto;
-    width: 100%;
+    // width: 100%;
 }
