--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -7,3 +7,4 @@ $button-bgc: #f5f4fa;
 $hero-bgc: #2F303A;
 $social-icon-color: #AFB1B8;
 $border-color: #ECECEC;
+$footer-contacts: rgba(255, 255, 255, 0.6);
