--- a/css/main.css
+++ b/css/main.css
@@ -38,6 +38,7 @@ img {
   display: block;
   max-width: 100%;
   height: auto;
+  width: 100%;
 }
 
 .container {
@@ -109,6 +110,13 @@ img {
   background-color: transparent;
   margin-left: auto;
 }
+.page-header__open-btn .page-header__icon {
+  fill: #212121;
+  transition: fill, 250ms, cubic-bezier(0.4, 0, 0.2, 1);
+}
+.page-header__open-btn .page-header__icon:hover, .page-header__open-btn .page-header__icon:focus, .page-header__open-btn .page-header__icon:active {
+  fill: #2196f3;
+}
 @media screen and (min-width: 767px) {
   .page-header__open-btn {
     display: none;
@@ -135,6 +143,9 @@ img {
   }
 }
 @media screen and (max-width: 767px) {
+  .nav-list .nav-list__link--current {
+    color: #2196f3;
+  }
   .nav-list__item:not(:last-child) {
     margin-bottom: 32px;
   }
@@ -235,6 +246,19 @@ img {
   .nav-list {
     display: flex;
     align-items: center;
+  }
+  .nav-list__item {
+    position: relative;
+  }
+  .nav-list__item .nav-list__link--current::after {
+    position: absolute;
+    left: 0px;
+    bottom: -1px;
+    content: "";
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: #2196f3;
   }
   .nav-list__item:not(:last-child) {
     margin-right: 50px;
