--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,45 +1,52 @@
-
-.page-header{
-    border-bottom:1px solid $border-color;
+.page-header {
+  border-bottom: 1px solid $border-color;
 }
 
- @media screen and (max-width: 767px){
-.header-content {
+@media screen and (max-width: 767px) {
+  .header-content {
     padding-top: 10px;
     padding-bottom: 10px;
+  }
 }
- }
 
 .page-header__nav {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .page-header__logo {
-    font-size: 24px;
-    font-weight: 700;
-    line-height: calc(28/24);
-    letter-spacing: 0.03em;
-    font-family: "Raleway", sans-serif;
-    color: $primary-text-color;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: calc(28 / 24);
+  letter-spacing: 0.03em;
+  font-family: "Raleway", sans-serif;
+  color: $primary-text-color;
 
-    .page-header__text {
-        color: $web-element-color;
-    }
+  .page-header__text {
+    color: $web-element-color;
+  }
 }
 
 .page-header__open-btn {
-    display: inline-flex;
-    margin: 0;
-    padding: 0;
-    border: none;
-    background-color: transparent;
-    margin-left: auto;
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  margin-left: auto;
 
-    @media screen and (min-width: 767px) {
-        display: none;
+  .page-header__icon {
+    fill: $primary-text-color;
+    transition: fill, 250ms, cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus,
+    &:active {
+      fill: $web-element-color;
     }
+  }
 
+  @media screen and (min-width: 767px) {
+    display: none;
+  }
 }
-
-
