--- a/sass/utils/_style-reset.scss
+++ b/sass/utils/_style-reset.scss
@@ -1,48 +1,48 @@
 body {
-    font-family: "Roboto", sans-serif;
-    background-color: var(--main-bgc);
-    color: var(--primary-text-color);
+  font-family: "Roboto", sans-serif;
+  background-color: var(--main-bgc);
+  color: var(--primary-text-color);
 
-    &.no-scroll {
-        overflow: hidden;
-    }
+  &.no-scroll {
+    overflow: hidden;
+  }
 }
 
 .visually-hidden {
-    position: absolute;
-    white-space: nowrap;
-    width: 1px;
-    height: 1px;
-    overflow: hidden;
-    border: 0;
-    padding: 0;
-    clip: rect(0 0 0 0);
-    clip-path: inset(50%);
-    margin: -1px;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 %section {
-    padding-top: 94px;
-    padding-bottom: 94px;
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 
 %list {
-    list-style: none;
-    margin: 0;
-    padding: 0;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .titles h2 {
-    text-align: center;
+  text-align: center;
 }
 
 img {
-    display: block;
-    max-width: 100%;
-    height: auto;
-    // width: 100%;
+  display: block;
+  max-width: 100%;
+  height: auto;
+  width: 100%;
 }
