--- a/css/main.css
+++ b/css/main.css
@@ -219,6 +219,13 @@ img {
   }
 }
 
+.page-header__icon {
+  fill: #212121;
+}
+.page-header__icon:hover, .page-header__icon:focus {
+  fill: #2196f3;
+}
+
 .page-header__close-btn {
   position: absolute;
   top: 10px;
@@ -250,16 +257,6 @@ img {
   .nav-list__item {
     position: relative;
   }
-  .nav-list__item .nav-list__link--current::after {
-    position: absolute;
-    left: 0px;
-    bottom: -1px;
-    content: "";
-    width: 100%;
-    height: 4px;
-    border-radius: 2px;
-    background-color: #2196f3;
-  }
   .nav-list__item:not(:last-child) {
     margin-right: 50px;
   }
@@ -272,6 +269,19 @@ img {
     color: #212121;
     padding-top: 32px;
     padding-bottom: 32px;
+  }
+  .nav-list__link--current {
+    color: #2196f3;
+  }
+  .nav-list__link--current::after {
+    position: absolute;
+    left: 0px;
+    bottom: -1px;
+    content: "";
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: #2196f3;
   }
 
   .social-list {
@@ -313,6 +323,15 @@ img {
     font-size: 26px;
     line-height: 1.19;
     letter-spacing: 0.03em;
+  }
+
+  .nav-list__link {
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .nav-list__link:hover,
+.nav-list__link:focus {
+    color: #2196f3;
   }
 
   .contacts {
