--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -97,6 +97,14 @@
   }
 }
 
+.page-header__icon {
+  fill: $primary-text-color;
+  &:hover,
+  &:focus {
+    fill: $active-element-color;
+  }
+}
+
 .page-header__close-btn {
   position: absolute;
   top: 10px;
@@ -127,17 +135,6 @@
 
     &__item {
       position: relative;
-
-      .nav-list__link--current::after {
-        position: absolute;
-        left: 0px;
-        bottom: -1px;
-        content: "";
-        width: 100%;
-        height: 4px;
-        border-radius: 2px;
-        background-color: $active-element-color;
-      }
     }
 
     &__item:not(:last-child) {
@@ -149,6 +146,19 @@
       @include font(500, 14px, 1.14, 0.02em, $primary-text-color);
       padding-top: 32px;
       padding-bottom: 32px;
+    }
+    &__link--current {
+      color: $web-element-color;
+    }
+    &__link--current::after {
+      position: absolute;
+      left: 0px;
+      bottom: -1px;
+      content: "";
+      width: 100%;
+      height: 4px;
+      border-radius: 2px;
+      background-color: $active-element-color;
     }
   }
 
@@ -191,6 +201,14 @@
 
   .page-header__logo {
     @include font(700, 26px, 1.19, 0.03em, null);
+  }
+
+  .nav-list__link {
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .nav-list__link:hover,
+  .nav-list__link:focus {
+    color: $web-element-color;
   }
 
   .contacts {
