--- a/css/main.css
+++ b/css/main.css
@@ -344,6 +344,15 @@ img {
     margin-right: 50px;
     margin-bottom: 0px;
   }
+  .contacts__email, .contacts__tel {
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .contacts__icon {
+    fill: currentColor;
+  }
+  .contacts__email:hover, .contacts__email:focus, .contacts__tel:hover, .contacts__tel:focus {
+    color: #2196f3;
+  }
 }
 .hero {
   text-align: center;
