--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -221,5 +221,19 @@
       margin-right: 50px;
       margin-bottom: 0px;
     }
+    &__email,
+    &__tel {
+      transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    &__icon {
+      fill: currentColor;
+    }
+    &__email:hover,
+    &__email:focus,
+    &__tel:hover,
+    &__tel:focus {
+      color: $web-element-color;
+    }
   }
 }
