--- a/css/main.css
+++ b/css/main.css
@@ -249,7 +249,6 @@ img {
     align-items: center;
     margin-left: auto;
   }
-
   .nav-list {
     display: flex;
     align-items: center;
@@ -283,11 +282,9 @@ img {
     border-radius: 2px;
     background-color: #2196f3;
   }
-
   .social-list {
     display: none;
   }
-
   .contacts {
     display: flex;
     flex-direction: column-reverse;
@@ -317,23 +314,19 @@ img {
     align-items: center;
     margin-left: auto;
   }
-
   .page-header__logo {
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
     letter-spacing: 0.03em;
   }
-
   .nav-list__link {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
-
   .nav-list__link:hover,
 .nav-list__link:focus {
     color: #2196f3;
   }
-
   .contacts {
     display: flex;
     align-items: center;
@@ -358,16 +351,45 @@ img {
   text-align: center;
   padding-top: 118px;
   padding-bottom: 118px;
-  max-width: 1600px;
+  max-width: 480px;
   height: 400px;
   margin-left: auto;
   margin-right: auto;
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/img/mobile-hero.jpg);
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/img/mobile-hero.jpg");
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   background-repeat: no-repeat;
   background-size: cover;
 }
+@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/img/img2x-hero-mobile.jpg");
+  }
+}
 
+@media screen and (min-width: 768px) {
+  .hero {
+    max-width: 768px;
+    height: 400px;
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/img/img@1x-hero-tab.jpg");
+  }
+}
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/img/img@2x-hero-tab.jpg");
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero {
+    max-width: 1600px;
+    height: 600px;
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/img/Img@1x-hero-desctop.jpg");
+  }
+}
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/img/Img@2x-hero-desctop.jpg");
+  }
+}
 .hero__title {
   font-weight: 900;
   font-size: 26px;
@@ -511,6 +533,14 @@ img {
   background-color: #fff;
   color: #AFB1B8;
   fill: #AFB1B8;
+  transition-property: background-color, color, fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.our-team__social-link:hover, .our-team__social-link:focus {
+  background-color: #2196f3;
+  color: #ffffff;
+  fill: #ffffff;
 }
 
 .our-team__social-icon {
@@ -551,16 +581,22 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid #AFB1B8;
+  border: 1px solid #afb1b8;
   border-radius: 4px;
   width: 100%;
   height: 100%;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.customers-link:hover, .customers-link:focus {
+  border: 1px solid #2196f3;
+}
 
 .customers-icon {
   fill: #AFB1B8;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.customers-link:hover > .customers-icon, .customers-link:focus > .customers-icon {
+  fill: #2196f3;
 }
 
 @media screen and (min-width: 768px) {
