--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,30 +1,85 @@
-    .hero{
-        text-align: center;
-        padding-top: 118px;
-        padding-bottom: 118px;
-        max-width: 1600px;
-        height: 400px;
-        margin-left: auto;
-        margin-right: auto;
-        background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url(/img/mobile-hero.jpg);
-        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));;
-        background-repeat: no-repeat;
-        background-size: cover;
-       
+.hero {
+  text-align: center;
+  padding-top: 118px;
+  padding-bottom: 118px;
+  max-width: 480px;
+  height: 400px;
+  margin-left: auto;
+  margin-right: auto;
+  background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url("/img/mobile-hero.jpg");
+
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  @include retina {
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url("/img/img2x-hero-mobile.jpg");
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .hero {
+    max-width: 768px;
+    height: 400px;
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url("/img/img@1x-hero-tab.jpg");
+
+    @include retina {
+      background-image: linear-gradient(
+          to right,
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url("/img/img@2x-hero-tab.jpg");
     }
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero {
+    max-width: 1600px;
+    height: 600px;
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url("/img/Img@1x-hero-desctop.jpg");
+
+    @include retina {
+      background-image: linear-gradient(
+          to right,
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url("/img/Img@2x-hero-desctop.jpg");
+    }
+  }
+}
 
 .hero__title {
-    @include font (900, 26px, 1.62, 0.06em, $main-bgc );
-    text-transform: uppercase;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 30px;
-    max-width: 360px;
-
-   
+  @include font(900, 26px, 1.62, 0.06em, $main-bgc);
+  text-transform: uppercase;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 30px;
+  max-width: 360px;
 }
 
 .hero__button {
-    @include hero-button();
+  @include hero-button();
 }
