--- a/css/main.css
+++ b/css/main.css
@@ -380,6 +380,8 @@ img {
 }
 @media screen and (min-width: 1200px) {
   .hero {
+    padding-top: 200px;
+    padding-bottom: 200px;
     max-width: 1600px;
     height: 600px;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/img/Img@1x-hero-desctop.jpg");
@@ -401,6 +403,16 @@ img {
   margin-right: auto;
   margin-bottom: 30px;
   max-width: 360px;
+}
+@media screen and (min-width: 1200px) {
+  .hero__title {
+    max-width: 696px;
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    letter-spacing: 0.06em;
+    color: #ffffff;
+  }
 }
 
 .hero__button {
