--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -51,6 +51,8 @@
 
 @media screen and (min-width: 1200px) {
   .hero {
+    padding-top: 200px;
+    padding-bottom: 200px;
     max-width: 1600px;
     height: 600px;
     background-image: linear-gradient(
@@ -78,6 +80,11 @@
   margin-right: auto;
   margin-bottom: 30px;
   max-width: 360px;
+
+  @media screen and (min-width: 1200px) {
+    max-width: 696px;
+    @include font(900, 44px, 1.36, 0.06em, $main-bgc);
+  }
 }
 
 .hero__button {
