--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -11,7 +11,7 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url("/img/mobile-hero.jpg");
+    url("../img/mobile-hero.jpg");
 
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   background-repeat: no-repeat;
@@ -23,7 +23,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("/img/img2x-hero-mobile.jpg");
+      url("../img/img2x-hero-mobile.jpg");
   }
 }
 
@@ -36,7 +36,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("/img/img@1x-hero-tab.jpg");
+      url("../img/img@1x-hero-tab.jpg");
 
     @include retina {
       background-image: linear-gradient(
@@ -44,7 +44,7 @@
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)
         ),
-        url("/img/img@2x-hero-tab.jpg");
+        url("../img/img@2x-hero-tab.jpg");
     }
   }
 }
@@ -60,7 +60,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("/img/Img@1x-hero-desctop.jpg");
+      url("../img/Img@1x-hero-desctop.jpg");
 
     @include retina {
       background-image: linear-gradient(
@@ -68,7 +68,7 @@
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)
         ),
-        url("/img/Img@2x-hero-desctop.jpg");
+        url("../img/Img@2x-hero-desctop.jpg");
     }
   }
 }
