--- a/css/main.css
+++ b/css/main.css
@@ -91,12 +91,21 @@ img {
 }
 
 .page-header__logo {
-  font-size: 24px;
   font-weight: 700;
+  font-size: 24px;
   line-height: 1.1666666667;
   letter-spacing: 0.03em;
-  font-family: "Raleway", sans-serif;
   color: #212121;
+  font-family: "Raleway", sans-serif;
+}
+@media screen and (min-width: 1200px) {
+  .page-header__logo {
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.1923076923;
+    letter-spacing: 0.03em;
+    color: #212121;
+  }
 }
 .page-header__logo .page-header__text {
   color: #2196f3;
@@ -125,7 +134,6 @@ img {
 
 @media screen and (max-width: 767px) {
   .menu-container {
-    padding: 48px 40px;
     background-color: #ffffff;
     position: fixed;
     top: 0;
@@ -134,12 +142,20 @@ img {
     height: 100%;
     z-index: 3;
     overflow: auto;
-    display: none;
+  }
+  .menu-container .container {
+    position: relative;
+    padding-top: 48px;
+    padding-bottom: 48px;
+    padding-left: 40px;
+    padding-right: 0;
+    display: flex;
     flex-direction: column;
     overflow: auto;
+    height: 100%;
   }
-  .menu-container.is-open {
-    display: flex;
+  .menu-container.is-closed {
+    display: none;
   }
 }
 @media screen and (max-width: 767px) {
@@ -199,7 +215,7 @@ img {
   .social-list {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: left;
   }
   .social-list__item:not(:last-child) {
     margin-right: 10px;
@@ -245,9 +261,12 @@ img {
 
 @media screen and (min-width: 768px) {
   .menu-container {
+    margin-left: auto;
+  }
+  .menu-container .container {
     display: flex;
     align-items: center;
-    margin-left: auto;
+    padding: 0;
   }
   .nav-list {
     display: flex;
@@ -314,12 +333,6 @@ img {
     align-items: center;
     margin-left: auto;
   }
-  .page-header__logo {
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
-    letter-spacing: 0.03em;
-  }
   .nav-list__link {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
@@ -338,6 +351,9 @@ img {
     margin-bottom: 0px;
   }
   .contacts__email, .contacts__tel {
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   .contacts__icon {
@@ -444,7 +460,7 @@ img {
   display: block;
   width: 100%;
   height: 120px;
-  background-color: #F5F4FA;
+  background-color: #f5f4fa;
   border-radius: 4px;
   display: flex;
   justify-content: center;
@@ -460,8 +476,14 @@ img {
   text-transform: uppercase;
   text-align: center;
 }
+@media screen and (min-width: 768px) {
+  .features__title {
+    text-align: left;
+  }
+}
 
 .features__text {
+  font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -652,14 +674,6 @@ img {
   }
 }
 
-.page-header__logo {
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 1.1666666667;
-  letter-spacing: 0.03em;
-  color: #212121;
-  font-family: "Raleway", sans-serif;
-}
 .page-header__logo .page-header__text {
   color: #2196f3;
 }
@@ -1055,6 +1069,12 @@ img {
 @media screen and (min-width: 768px) {
   .filter-btns {
     justify-content: center;
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .filter-btns {
+    margin-bottom: 50px;
   }
 }
 
