--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,53 +1,53 @@
-
 .features__list {
-    @extend %list;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 30px;
+  @extend %list;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
 
-    .features__item {
-            max-width: 450px;
-            margin-left: auto;
-            margin-right: auto;
-        }
+  .features__item {
+    max-width: 450px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
- .features__wrapper {
-     display: block;
-     width: 100%;
-     height: 120px;
-     background-color: #F5F4FA;
-     border-radius: 4px;
-     display: flex;
-     justify-content: center;
-     align-items: center;
- }
+.features__wrapper {
+  display: block;
+  width: 100%;
+  height: 120px;
+  background-color: #f5f4fa;
+  border-radius: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
- .features__title {
-     margin-top: 30px;
-     margin-bottom: 10px;
-     font-size: 14px;
-     line-height: 1.14;
-     letter-spacing: 0.03em;
-     text-transform: uppercase;
-     text-align: center;
- }
+.features__title {
+  margin-top: 30px;
+  margin-bottom: 10px;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  text-align: center;
 
- .features__text {
-     font-size: 14px;
-     line-height: 1.71;
-     letter-spacing: 0.03em;
-     color: $secondary-text-color;
-     margin: 0px;
- }
+  @media screen and (min-width: 768px) {
+    text-align: left;
+  }
+}
+
+.features__text {
+  @include font(400, 14px, 1.71, 0.03em, $secondary-text-color);
+  margin: 0px;
+}
 
 // ...........................................................планшет
 .features__item {
-    @media screen and (min-width:768px) {
-         width: calc((100% - 30px) / 2);
-    }
- 
-    @media screen and (min-width:1200px) {
-        width: calc((100% - 90px) / 4);
-    }
+  @media screen and (min-width: 768px) {
+    width: calc((100% - 30px) / 2);
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: calc((100% - 90px) / 4);
+  }
 }
