--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -1,6 +1,5 @@
 @media screen and (max-width: 767px) {
   .menu-container {
-    padding: 48px 40px;
     background-color: #ffffff;
     position: fixed;
     top: 0;
@@ -9,12 +8,21 @@
     height: 100%;
     z-index: 3;
     overflow: auto;
-    display: none;
-    flex-direction: column;
-    overflow: auto;
 
-    &.is-open {
+    .container {
+      position: relative;
+      padding-top: 48px;
+      padding-bottom: 48px;
+      padding-left: 40px;
+      padding-right: 0;
       display: flex;
+      flex-direction: column;
+      overflow: auto;
+      height: 100%;
+    }
+
+    &.is-closed {
+      display: none;
     }
   }
 }
@@ -77,7 +85,7 @@
   @media screen and (max-width: 767px) {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: left;
 
     &__item:not(:last-child) {
       margin-right: 10px;
@@ -124,9 +132,13 @@
 // -------------------------------------------------------------Планшет
 @media screen and (min-width: 768px) {
   .menu-container {
-    display: flex;
-    align-items: center;
     margin-left: auto;
+
+    .container {
+      display: flex;
+      align-items: center;
+      padding: 0;
+    }
   }
 
   .nav-list {
@@ -199,10 +211,6 @@
     margin-left: auto;
   }
 
-  .page-header__logo {
-    @include font(700, 26px, 1.19, 0.03em, null);
-  }
-
   .nav-list__link {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
@@ -223,6 +231,7 @@
     }
     &__email,
     &__tel {
+      @include font(null, 14px, 1.14, 0.02em, null);
       transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
