--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@ a {
   text-decoration: none;
 }
 
-.porfolio-list, .filter-btns, .form-list, .footer-social__list, .footer-data__list, .customers-list, .our-team__social, .our-team__list, .features__list, .social-list, .contacts, .nav-list {
+.porfolio-list, .filter-btns, .form-list, .footer-social__list, .footer-data__list, .customers-list, .our-team__social, .our-team__list, .features__list, .our-job__list, .social-list, .contacts, .nav-list {
   list-style: none;
   margin: 0;
   padding: 0;
@@ -331,7 +331,11 @@ img {
   .menu-container {
     display: flex;
     align-items: center;
-    margin-left: auto;
+    margin-left: 93px;
+    width: 100%;
+  }
+  .menu-container .container {
+    width: 100%;
   }
   .nav-list__link {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -344,7 +348,7 @@ img {
     display: flex;
     align-items: center;
     flex-direction: row-reverse;
-    margin-left: 331px;
+    margin-left: auto;
   }
   .contacts__item:nth-child(2) {
     margin-right: 50px;
@@ -445,6 +449,60 @@ img {
   border-radius: 4px;
 }
 
+.our-job {
+  padding-bottom: 94px;
+}
+@media screen and (max-width: 1199px) {
+  .our-job {
+    display: none;
+  }
+}
+
+.our-job__title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.1666666667;
+  letter-spacing: 0.03em;
+  color: #212121;
+  margin-top: 0px;
+  margin-bottom: 50px;
+}
+
+.our-job__list {
+  display: flex;
+}
+
+.our-job__item:nth-child(n+2) {
+  margin-left: 30px;
+}
+
+.img-thumb {
+  position: relative;
+}
+.img-thumb .our-job__image {
+  display: block;
+}
+
+.img-title {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 70px;
+  padding-top: 27px;
+  padding-bottom: 27px;
+  background-color: rgba(47, 48, 58, 0.8);
+}
+.img-title .img-title__text {
+  margin: 0%;
+  text-align: center;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
 .features__list {
   display: flex;
   flex-wrap: wrap;
@@ -513,6 +571,14 @@ img {
   font-size: 28px;
   line-height: 1.18;
   letter-spacing: 0.03em;
+}
+@media screen and (min-width: 1200px) {
+  .our-team__title {
+    font-size: 36px;
+    line-height: 1.1666666667;
+    letter-spacing: 0.03em;
+    margin-bottom: 50px;
+  }
 }
 
 .our-team__list {
@@ -598,6 +664,14 @@ img {
   font-size: 28px;
   line-height: 1.1785714286;
   letter-spacing: 0.03em;
+}
+@media screen and (min-width: 1200px) {
+  .customers-title {
+    font-size: 36px;
+    line-height: 1.1666666667;
+    letter-spacing: 0.03em;
+    margin-bottom: 50px;
+  }
 }
 
 .customers-list {
@@ -833,9 +907,10 @@ img {
   opacity: 1;
   z-index: 1;
   padding: 93px 15px 94px 15px;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.backdrop.is-hidden {
+
+.is-hidden {
   visibility: hidden;
   opacity: 0;
   pointer-events: none;
@@ -846,8 +921,7 @@ img {
   border-radius: 4px;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  opacity: 1;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 @media screen and (min-width: 480px) {
   .modal {
@@ -866,8 +940,7 @@ img {
 }
 
 .backdrop.is-hidden .modal {
-  transform: translate(-50%, -50%) scale(1.1);
-  opacity: 0;
+  transform: translate(-50%, -50%) scale(1.5);
 }
 
 .close-btn {
