--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -2,6 +2,11 @@
   margin-top: 0;
   margin-bottom: 30px;
   @include font(null, 28px, calc(33 / 28), 0.03em, null);
+
+  @media screen and (min-width: 1200px) {
+    @include font(null, 36px, calc(42 / 36), 0.03em, null);
+    margin-bottom: 50px;
+  }
 }
 
 .customers-list {
