--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -208,11 +208,20 @@
   .menu-container {
     display: flex;
     align-items: center;
-    margin-left: auto;
+    margin-left: 93px;
+    width: 100%;
+
+    .container {
+      width: 100%;
+    }
   }
 
-  .nav-list__link {
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  .nav-list {
+    // margin-left: 93px;
+
+    &__link {
+      transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
   }
   .nav-list__link:hover,
   .nav-list__link:focus {
@@ -223,7 +232,7 @@
     display: flex;
     align-items: center;
     flex-direction: row-reverse;
-    margin-left: 331px;
+    margin-left: auto;
 
     &__item:nth-child(2) {
       margin-right: 50px;
