--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,27 +1,22 @@
-@import './utils/vars';
-@import './utils/style-reset';
-@import './components/container';
-@import './utils/mixins';
-@import './components/section';
+@import "./utils/vars";
+@import "./utils/style-reset";
+@import "./components/container";
+@import "./utils/mixins";
+@import "./components/section";
 
-@import './components/header';
-@import './components/menu';
-@import './components/hero';
-@import './components/features';
-@import './components/our-team';
-@import './components/clients';
-@import './components/footer';
-@import './components/modal';
-@import './components/form';
+@import "./components/header";
+@import "./components/menu";
+@import "./components/hero";
+@import "./components/our-job";
+@import "./components/features";
+@import "./components/our-team";
+@import "./components/clients";
+@import "./components/footer";
+@import "./components/modal";
+@import "./components/form";
 
-@import './components/portfolio';
-
-
-
-
+@import "./components/portfolio";
 
 // @import './components/modal';
 // @import './components/form';
 // @import './components/portfolio';
-
-
